--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -8,6 +8,11 @@
 <!-- Section 1: Header -->
 {% include "sections/header.html" %}
 
+<!-- Button to test modal -->
+<!-- <button onclick="showAddReviewModal()" class="px-5 py-2 bg-gray-800 text-white rounded-lg shadow">
+    Add Review
+</button> -->
+
 <!-- Section 2: Features Preview -->
 {% include "sections/features_preview.html" %}
 
