fill review htmls

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,5 +63,7 @@
     {% block content %}{% endblock %}
     {% block extra_js %}{% endblock extra_js %}
     {% include 'add_review.html' %}
+    {% include 'review_detail.html' %}
+    {% include 'edit_review.html' %}
 </body>
 </html>
