Edit Booking layout dan toast

--- a/booking/templates/booking/booking_ajax.html
+++ b/booking/templates/booking/booking_ajax.html
@@ -162,7 +162,7 @@
 </div>
 
 <!-- Toast container -->
-<div id="toast-container" class="fixed z-50 space-y-2 w-full max-w-md px-4" style="bottom: 1rem; left: 50%; transform: translateX(-50%);"></div>
+<div id="toast-container" class="fixed top-4 left-1/2 transform -translate-x-1/2 z-50 space-y-2 w-full max-w-md px-4"></div>
 
 <!-- Custom Confirmation Modal -->
 <div id="confirmModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
