--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
-<nav id="navbar" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 font-['Roboto'] px-6">
-    <div class="mx-auto flex max-w-7xl items-center justify-between py-4">
+<nav id="navbar" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 font-['Roboto']">
+    <div class="mx-auto flex max-w-7xl items-center justify-between py-4 px-4 sm:px-6 lg:px-8">
         
         <!-- Brand/Logo -->
         <a href="/" id="brand-link" class="text-2xl font-bold text-white tracking-wide transition-colors duration-300">
